--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HTML5. Базовый шаблон</title>
-  <meta name="description" content="Шаблон HTML5 для любого проекта">
+  <title>HTML. Базовый шаблон</title>
+  <meta name="description" content="Базовый шаблон HTML">
   <meta name="author" content="Кодер">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://кодер.укр/">
-  <meta property="og:description" content="Шаблон HTML5 для любого проекта">
+  <meta property="og:description" content="Базовый шаблон HTML">
   <meta property="og:image" content="image.png">
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
@@ -16,7 +15,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- your content here... -->
+  <!-- content -->
   <script src="js/scripts.js"></script>
 </body>
 </html>
